--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+futures = "0.3.16"
+mongodb = "2.1"
+rand = "0.8.4"
+serde = { version = "1.0", features = ["derive"] }
