--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1.2.0", features = ["full"] }
 async-std = "1.10.0"
 bson = "1.0.0"
 csv = "1.1.6"
+dotenv = "0.15.0"
 
 [[bin]]
 name = "backend"
